# Libre

./: .gitsubprojects  .travis.yml  CMakeLists.txt  README.md
CMake/: ispc.cmake
apps/livre/: CMakeLists.txt  livre.cpp
apps/livreGUI/: AppSettings.h
datasources/: CMakeLists.txt
datasources/memory/: CMakeLists.txt  MemoryDataSource.cpp
datasources/raw/: CMakeLists.txt  RawDataSource.cpp
datasources/uvf/: CMakeLists.txt  UVFDataSource.cpp
doc/: Changelog.md
livre/Eq/: Channel.cpp  Channel.h  Node.cpp  Node.h  Pipe.cpp  Pipe.h
livre/core/: CMakeLists.txt  types.h
livre/eq/: CMakeLists.txt  Channel.cpp  Client.cpp  Config.cpp  Files.cmake  FrameGrabber.cpp  Node.cpp  Node.h  Window.cpp  Window.h
livre/hpx/: types.h
livre/lib/: CMakeLists.txt  types.h
livre/uvf/: UVFDataSource.cpp
renderers/: CMakeLists.txt
renderers/cudaRaycaster/: CMakeLists.txt  CudaIrradianceCompute.cpp  CudaIrradianceCompute.h  CudaRaycastPipeline.cpp  CudaRaycastPipeline.h  CudaRaycastRenderer.cpp  CudaRaycastRenderer.h  CudaRenderUploadFilter.cpp  CudaRenderUploadFilter.h  CudaTextureObject.cpp  CudaTextureObject.h  CudaTexturePool.cpp  CudaTexturePool.h  CudaTextureUploadFilter.cpp  CudaTextureUploadFilter.h  types.h
renderers/glRaycaster/: CMakeLists.txt  GLRaycastPipeline.cpp  GLRaycastPipeline.h  GLRaycastRenderer.cpp  GLRaycastRenderer.h  GLRaycasterPipeline.cpp  GLRaycasterPipeline.h  GLRenderUploadFilter.cpp  GLRenderUploadFilter.h
renderers/glRaycaster/shaders/: fragRaycast.glsl
tests/core/: cache.cpp  pluginFactory.cpp  signalledVariable.cpp
(+143 files in other folders)
